fix for Insurance check box should be aligned next to first alphabet in the insurance name (#3423)

--- a/src/components/ui/Checkbox/styles.module.scss
+++ b/src/components/ui/Checkbox/styles.module.scss
@@ -1,13 +1,12 @@
 .checkboxLabel {
   display: flex;
-  align-items: center;
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0.10000000149011612px;
 
   input {
     width: 16px;
-    height: 16px;
+    height: 20px;
     min-width: 16px;
   }
 }
